DR Table 컴포넌트 열속성 동작 변경
- 컬럼(열)을 선택할때 해당 컬럼 속성이 출력됨.

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -675,10 +675,10 @@ input, button, select, optgroup, textarea {
 .form-container .form-properties .property-group[id=option] .property-group-option {
   float: right;
 }
-.form-container .form-properties .property-group[id=field] {
+.form-container .form-properties .property-group[id=drTableColumns] {
   position: relative;
 }
-.form-container .form-properties .property-group[id=field] .property-group-field {
+.form-container .form-properties .property-group[id=drTableColumns] .property-group-drTableColumns {
   float: right;
 }
 .form-container .form-properties .property-group .property-field {
