--- a/src/main/resources/public/src/scss/form/_layout.scss
+++ b/src/main/resources/public/src/scss/form/_layout.scss
@@ -131,10 +131,10 @@
           float: right;
         }
       }
-      &[id="field"] {
+      &[id="drTableColumns"] {
         position: relative;
 
-        .property-group-field {
+        .property-group-drTableColumns {
           float: right;
         }
       }
