--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -232,12 +232,12 @@
         <div class="property-group" id="validate">
             <h5><label class="property-group-name" th:text="#{form.properties.validate}"></label></h5>
         </div>
-        <div class="property-group" id="field">
+        <div class="property-group" id="drTableColumns">
             <h5>
-                <label class="property-group-name" th:text="#{form.properties.field}"></label>
-                <div class="property-group-field">
-                    <button type="button" class="ghost-line btn-option" id="field-delete"><span class="icon icon-minus"></span></button>
-                    <button type="button" class="ghost-line btn-option" id="field-add"><span class="icon icon-plus"></span></button>
+                <label class="property-group-name" th:text="#{form.properties.drTableColumns}"></label>
+                <div class="property-group-drTableColumns">
+                    <button type="button" class="ghost-line btn-option" id="drTableColumns-delete"><span class="icon icon-minus"></span></button>
+                    <button type="button" class="ghost-line btn-option" id="drTableColumns-add"><span class="icon icon-plus"></span></button>
                 </div>
             </h5>
         </div>
