--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -63,7 +63,7 @@
                 <label class="field-label">
                     <span th:text="#{cmdb.ci.label.tag}"></span>
                 </label>
-                <input type="text" id="ciTags" class="col-pct-12 inherit"  th:onclick="CI.addTags(this, [[${ciData?.ciTags}]]);" readonly/>
+                <input type="text" id="tags" name="tags" class="col-pct-12 inherit" th:value="|${tags}|" readonly/>
             </div>
             <!-- 세부속성 -->
             <div class="flex-column view-row">
