--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1915,7 +1915,7 @@ button .icon-plus {
   width: 100%;
 }
 .itsm-container .main .list-head tr {
-  height: 2.375rem;
+  height: 2.125rem;
   border-bottom: 0.125rem solid #E1E3E6;
 }
 .itsm-container .main .list-head tr th {
@@ -1931,6 +1931,9 @@ button .icon-plus {
   position: absolute;
   width: 100%;
   height: 32.69rem;
+}
+.itsm-container .main .list-body tr {
+  height: 3.375rem;
 }
 .itsm-container .main .list-body tr:hover {
   background-color: #EBEBEB;
