#10082 [CI 컴포넌트] 동일 CI를 다른 문서에서 처리할 경우
- 초기 commit

--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -58,11 +58,13 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
+                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&flag=itsm' + '&offset=' +
+                    offsetCount;
                 restSubmit('get', '/rest/cmdb/cis?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
+                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&flag=itsm' + '&offset=' +
+                    offsetCount;
                 restSubmit('get', '/cmdb/cis?' + urlParam, isScroll);
             }
         }
@@ -93,7 +95,7 @@
                                 body: response.responseText,
                                 classes: 'cmdb-ci-view-modal',
                                 buttons: [{
-                                    content: i18n.msg('common.btn.cancel'),
+                                    content: i18n.msg('common.btn.close'),
                                     classes: "default-line",
                                     bindKey: false,
                                     callback: function (modal) {
