#10082 [CI 컴포넌트] 동일 CI를 다른 문서에서 처리할 경우
- CI 컴포넌트에서 CI 조회 시 CI 상태가 사용중이고 CMDB 프로세스를 진행하고 있는 CI는 가져오면 않도록 수정 함.
- 태그 조회 관련 이벤트를 keyup에서 Enter로 임시로 변경 함.
- CI 컴포넌트에서 CI 조회 시 전체 개수 오류 수정 함.
- AttributeTest.kt 주석 품.

--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -61,13 +61,9 @@
                 element.addEventListener('change', () => tokenSearch(false), false);
             });
 
-            document.getElementById('searchValue').addEventListener('keyup', (e) => {
-                if (e.key === 'Enter') {
-                    e.preventDefault();
-                    tokenSearch(false);
-                }
-            }, false);
+            document.getElementById('searchValue').addEventListener('keyup', (e) => {tokenSearch(false);}, false);
 
+            // 태그 조회가 아직 미완성이기 때문에 임시적으로 엔터로 변경한다.
             document.getElementById('searchTags').addEventListener('keyup', (e) => {
                 if (e.key === 'Enter') {
                     e.preventDefault();
