--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -16,7 +16,7 @@
     </tr>
     </thead>
     <tbody class="list-body">
-    <input type="hidden" id="totalCount" th:value="${ciListCount}"/>
+    <input type="hidden" id="ciCount" name="ciCount" th:value="${ciListCount}"/>
     <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(ciList)}">
         <td style="width: 100%;" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
