--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -102,6 +102,9 @@ table[id="documentDisplay"] {
     .right {
       right: 0.25rem; // 4px
     }
+    .padding {
+      padding: 0.1875rem 0 0.1875rem 0; // 3px
+    }
 
     li {
       height: 1.5rem; // 24px
