결함 #10103 폼 디자이너 툴에서 문서양식 이름이 필수값이지만 비우고 저장이 가능하다.

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3689,7 +3689,7 @@ body.modal-active {
 }
 
 .modal-dialog.save-as .modal-content {
-  height: calc(25.63remm - 3.375rem - 5rem);
+  height: calc(25.63rem - 3.375rem - 5rem);
   padding: 0.625rem 1.25rem;
   -ms-overflow-style: none;
   /* IE and Edge */
