--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -115,4 +115,4 @@ $tooltip-contents-left:                       -1.25rem; // -20px
 $tooltip-contents-padding:                    1.0625rem 0.9375rem 0.9375rem 0.9375rem; // 17px 15px 15px 15px
 
 //////////////////////////// 다른이름으로 저장하기 //////////////////////////
-$save-as-modal-height:                        25.63remm; // 410px
+$save-as-modal-height:                        25.63rem; // 410px
