--- a/src/main/resources/public/template/scheduler/schedulerSearch.html
+++ b/src/main/resources/public/template/scheduler/schedulerSearch.html
@@ -123,7 +123,7 @@
             } else {
                 aTaskName.href = '/boards/'+ data.taskId +'/view';
             }
-            tdTaskName.innerText = data.taskName;
+            aTaskName.innerText = data.taskName;
             tdTaskName.appendChild(aTaskName);
 
             let tdStatus = document.createElement('td');
