--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -159,22 +159,25 @@
             tr.className = 'flex-row align-items-center';
 
             let tdCiIcon = document.createElement('td');
-            tdCiIcon.style.width = '5%';
+            tdCiIcon.style.width = '4%';
             let imgCiIcon = document.createElement('img');
-            imgCiIcon.style.width = '27';
-            imgCiIcon.style.height = '27';
+            imgCiIcon.style.width = '24';
+            imgCiIcon.style.height = '24';
             imgCiIcon.src = '/assets/media/images/cmdb/' + data.ciIcon;
             tdCiIcon.appendChild(imgCiIcon);
 
+            let tdCiNo = document.createElement('td');
+            tdCiNo.style.width = '21%';
+            tdCiNo.className = 'align-left underline pointer';
+            tdCiNo.onclick = function() {
+                openCIDetailModal(data.ciNo);
+            };
+            tdCiNo.innerText = data.ciNo;
+
             let tdCiTypeName = document.createElement('td');
             tdCiTypeName.style.width = '10%';
-            tdCiTypeName.className = 'align-center';
+            tdCiTypeName.className = 'align-left';
             tdCiTypeName.innerText = data.typeName;
-
-            let tdCiNo = document.createElement('td');
-            tdCiNo.style.width = '20%';
-            tdCiNo.className = 'align-center';
-            tdCiNo.innerText = data.ciNo;
 
             let tdCiName = document.createElement('td');
             tdCiName.style.width = '15%';
@@ -186,10 +189,13 @@
             tdCiDesc.className = 'align-left';
             tdCiDesc.innerText = data.ciDesc;
 
+            console.log(data.ciTag);
             let tdCiTag = document.createElement('td');
             tdCiTag.style.width = '25%';
-            tdCiTag.className = 'align-left';
-            tdCiTag.innerText = data.ciTag;
+            if (data.ciTag !== undefined) {
+                tdCiTag.className = 'tag align-left text-ellipsis';
+                tdCiTag.innerText = data.ciTag;
+            }
 
             tr.appendChild(tdCiIcon);
             tr.appendChild(tdCiNo);
