--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -29,8 +29,7 @@
             <div class="flex-column view-row">
                 <div class="view-content">
                     <pre class="space-line">
-                        <h5 th:text="#{download.label.category}"></h5>
-                        <span class="view-text" th:text="${download.downloadCategory}"/>
+                        <span class="view-text" th:text="#{${download.downloadCategory}}"/>
                     </pre>
                 </div>
             </div>
