--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -78,14 +78,21 @@
                 url: url,
                 params: JSON.stringify(formObj),
                 contentType: 'application/json',
-                callbackFunc: function () {
-                    let resultMsg = [[#{common.msg.save}]];
-                    if (method.toLowerCase() === 'delete') {
-                        resultMsg = [[#{common.msg.delete}]];
+                callbackFunc: function (response){
+                    let result = response.responseText
+                    let resultMsg =[[#{faq.msg.duplicateTitleInCategory}]];
+                    if(result >0){
+                        aliceJs.alertWarning(resultMsg);
                     }
-                    aliceJs.alertSuccess(resultMsg, function () {
-                        window.location.href = '/faqs/search';
-                    });
+                    else {
+                        resultMsg = [[#{common.msg.save}]];
+                        if (method.toLowerCase() === 'delete') {
+                            resultMsg = [[#{common.msg.delete}]];
+                        }
+                        aliceJs.alertSuccess(resultMsg, function () {
+                            window.location.href = '/faqs/search';
+                        });
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
