1. 스케줄 이력 기능 추가 2. 스케줄 목록 마지막 실행 결과 추가 (관련 쿼리 수정) 3. 스크립트 및 erd 수정 4. 스케줄 view 화면 추가

--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -127,7 +127,7 @@
 .cmdb-class-header,
 .cmdb-type-header,
 .cmdb-ci-header,
-.schedule-header {
+.scheduler-header {
   padding: 2.188rem 3.75rem 0 3.75rem; // 35px 60px 0px 60px
   background-color: $light-gray;
 }
@@ -383,7 +383,7 @@
 // CMDB > Attribute
 .custom-code-content-edit,
 .cmdb-attribute-content-edit,
-.schedule-content-edit {
+.scheduler-content-edit {
   padding: 2.188rem 23.13rem 3.125rem 23.13rem; // 35px 370px 50px 370px
   background-color: $white;
   border-top: $layout-header-border;
