--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -201,4 +201,7 @@ $cmdb-ci-modal-height:                       53.0625rem; // 849px
 $cmdb-ci-attribute-border:                   0.0625rem solid $line-gray; // 1px
 $cmdb-ci-attribute-bg-color:                 $light-gray;
 
+//////////////////////////// 스케줄러 모달 /////////////////////////
+$scheduler-modal-width:                      62.5rem; // 1000px
+$scheduler-modal-height:                     37.5rem; // 600px
 
