--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2113,7 +2113,7 @@ button .icon-plus {
 .cmdb-class-header,
 .cmdb-type-header,
 .cmdb-ci-header,
-.schedule-header {
+.scheduler-header {
   padding: 2.188rem 3.75rem 0 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2350,29 +2350,29 @@ button .icon-plus {
 
 .custom-code-content-edit,
 .cmdb-attribute-content-edit,
-.schedule-content-edit {
+.scheduler-content-edit {
   padding: 2.188rem 23.13rem 3.125rem 23.13rem;
   background-color: #ffffff;
   border-top: 0.0625rem solid #EBEBEB;
 }
 .custom-code-content-edit .under-bar,
 .cmdb-attribute-content-edit .under-bar,
-.schedule-content-edit .under-bar {
+.scheduler-content-edit .under-bar {
   margin-top: 0.625rem;
 }
 .custom-code-content-edit .condition,
 .cmdb-attribute-content-edit .condition,
-.schedule-content-edit .condition {
+.scheduler-content-edit .condition {
   width: 28.31rem;
 }
 .custom-code-content-edit .btn-minus,
 .cmdb-attribute-content-edit .btn-minus,
-.schedule-content-edit .btn-minus {
+.scheduler-content-edit .btn-minus {
   padding: 0;
 }
 .custom-code-content-edit .attribute,
 .cmdb-attribute-content-edit .attribute,
-.schedule-content-edit .attribute {
+.scheduler-content-edit .attribute {
   margin-left: 4rem;
 }
 
@@ -4484,6 +4484,42 @@ body.modal-active {
   padding: 1.25rem 1.25rem 1.25rem 0;
 }
 
+.modal-dialog.scheduler-list-modal {
+  width: 62.5rem;
+  height: 37.5rem;
+}
+.modal-dialog.scheduler-list-modal .modal-content {
+  height: calc(37.5rem - 3.375rem - 5rem);
+  padding: 1.25rem;
+}
+.modal-dialog.scheduler-list-modal .modal-content .table-set {
+  margin-top: 2.188rem;
+}
+.modal-dialog.scheduler-list-modal .modal-content .table-set table {
+  width: 100%;
+}
+.modal-dialog.scheduler-list-modal .modal-content .table-set table .list-head tr {
+  color: #3F4B56;
+  border-bottom: 0.125rem solid #E1E3E6;
+}
+.modal-dialog.scheduler-list-modal .modal-content .table-set table .list-body {
+  display: block;
+  width: 60rem;
+  height: 21.75rem;
+  color: #586872;
+  overflow-y: auto;
+}
+.modal-dialog.scheduler-list-modal .modal-content .table-set table .list-body .list-row {
+  display: table;
+  width: 100%;
+  height: 2.125rem;
+  line-height: 2.125rem;
+}
+.modal-dialog.scheduler-list-modal .modal-content .table-set table .list-body .list-row > td {
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 22.5rem;
+}
 .modal-dialog.tree {
   width: 40rem;
   height: 44.19rem;
