--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -1,6 +1,47 @@
 @import '../../template/_modal.scss';
 
 .modal-dialog {
+  &.scheduler-list-modal {
+    width: $scheduler-modal-width;
+    height: $scheduler-modal-height;
+    .modal-content {
+      height: calc(#{$scheduler-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
+      padding: 1.25rem; // 20px
+
+      .table-set {
+        margin-top: 2.188rem; // 35px
+        table {
+          width: 100%;
+          .list-head {
+            tr {
+              color: $light-black;
+              border-bottom: 0.125rem solid $default-gray;
+            }
+          }
+          .list-body {
+            display: block;
+            width: 60rem; // 960px
+            //height: 32.8125rem; // 525px
+            height: 21.75rem; // 348px
+            color: $dark-gray;
+            overflow-y: auto;
+            .list-row {
+              display: table;
+              width: 100%;
+              height: 2.125rem; // 34px
+              line-height: 2.125rem; // 24px
+              & > td {
+                display: inline-block; // 말줄임 적용을 위해 추가
+                vertical-align: middle;
+                max-width: 22.5rem; // 360px 에러 메시지 말줄임
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   // 트리 모달
   &.tree {
     width: $tree-modal-width;
