--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -9,19 +9,19 @@
 <body>
 <th:block layout:fragment="content">
     <div class="flex-column edit">
-        <div class="schedule-header">
+        <div class="scheduler-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{scheduler.label.schedule}"></h1>
                 <h6 class="description" th:text="#{scheduler.msg.scheduleDescription}"></h6>
             </div>
         </div>
-        <div class="schedule-content-edit">
+        <div class="scheduler-content-edit">
             <div class="flex-column edit-row">
                 <label for="taskName">
                     <span th:text="#{scheduler.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="taskName" required="required" maxlength="110"
+                <input type="text" id="taskName" required="required" maxlength="100"
                        th:value="${schedule?.taskName}">
             </div>
             <div class="flex-column edit-row">
@@ -62,7 +62,7 @@
                         <span th:text="#{scheduler.label.class}"></span>
                         <span class="required"></span>
                     </label>
-                    <input type="text" id="executeClass" required="required" maxlength="110"
+                    <input type="text" id="executeClass" required="required" maxlength="100"
                            th:value="${schedule?.executeClass}">
                 </div>
                 <div class="flex-column edit-row">
@@ -101,7 +101,7 @@
                     <span th:text="#{scheduler.label.cronExpression}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="cronExpression" required="required" maxlength="110"
+                <input type="text" id="cronExpression" required="required" maxlength="100"
                        th:value="${schedule?.cronExpression}">
             </div>
             <div id="executeCycleType-fixed-container" class="flex-column edit-row" th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
@@ -125,7 +125,7 @@
                     <button class="point-fill" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.execute')"
                             onclick="actionScheduler('execute')" th:text="#{scheduler.btn.immediatelyExecute}"></button>
                     <button class="default-fill" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.read')"
-                            onclick="historyScheduler()" th:text="#{scheduler.btn.history}"></button>
+                            onclick="openHistoryViewModal()" th:text="#{scheduler.btn.history}"></button>
                     <a class="btn default-line" href="/schedulers/search" th:text="#{common.btn.list}"></a>
                 </div>
             </div>
@@ -164,8 +164,51 @@
         }
 
         /** 이력 모달 **/
-        function historyScheduler() {
-            console.log(222);
+        function openHistoryViewModal() {
+            let historyOptions = {
+                title: i18n.msg('scheduler.label.history'),
+                classes: 'scheduler-list-modal',
+                body: `<div class="table-set" id="historyList"></div>`,
+                buttons: [{
+                    content: i18n.msg('common.btn.close'),
+                    classes: 'default-line',
+                    bindKey: false,
+                    callback: function(modal) {
+                        modal.hide();
+                    }
+                }],
+                close: {
+                    closable: false
+                },
+                onCreate: function (modal) {
+                    const taskId = /*[[${schedule?.taskId}]]*/''
+                    restModalSubmit('/schedulers/' + taskId + '/history', 'GET', {}, false, function (content) {
+                        document.getElementById('historyList').innerHTML = content;
+                        let executeTimeEle = document.querySelectorAll('td[name=executeTime]');
+                        for (let i = 0; i < executeTimeEle.length; i++) {
+                            executeTimeEle[i].textContent = i18n.userDateTime(executeTimeEle[i].textContent);
+                        }
+                        OverlayScrollbars(document.querySelector('.list-body'), {className: 'scrollbar'});
+                    });
+                }
+            };
+            const historyViewModal = new modal(historyOptions);
+            historyViewModal.show();
+        }
+
+        function restModalSubmit(url, method, data, progressbar, callbackFunc) {
+            aliceJs.sendXhr({
+                method: method,
+                url: url,
+                params: JSON.stringify(data),
+                callbackFunc: function (xhr) {
+                    if (typeof callbackFunc === 'function') {
+                        callbackFunc(xhr.responseText);
+                    }
+                },
+                contentType: 'application/json; charset=utf-8',
+                showProgressbar: progressbar
+            });
         }
 
         /** method 에 따른 데이터 셋팅 **/
