--- a/src/main/resources/public/template/scheduler/schedulerList.html
+++ b/src/main/resources/public/template/scheduler/schedulerList.html
@@ -10,12 +10,12 @@
     <tr class="flex-row align-items-center">
         <th style="width: 20%" class="align-left" th:text="#{scheduler.label.name}"></th>
         <th style="width: 5%" class="align-center" th:text="#{scheduler.label.status}"></th>
-        <th style="width: 10%" class="align-center" th:text="#{scheduler.label.taskType}"></th>
-        <th style="width: 25%" class="align-center" th:text="#{scheduler.label.class}"></th>
+        <th style="width: 8%" class="align-center" th:text="#{scheduler.label.taskType}"></th>
+        <th style="width: 27%" class="align-center" th:text="#{scheduler.label.class}"></th>
         <th style="width: 10%" class="align-center" th:text="#{scheduler.label.executeCycleType}"></th>
-        <th style="width: 10%" class="align-left" th:text="#{scheduler.label.executeCyclePeriod}"></th>
-        <th style="width: 15%" class="align-left" th:text="#{scheduler.label.lastExecuteTime}"></th>
-        <th style="width: 5%" class="align-left" th:text="#{scheduler.label.result}"></th>
+        <th style="width: 10%" class="align-center" th:text="#{scheduler.label.executeCyclePeriod}"></th>
+        <th style="width: 12%" class="align-center" th:text="#{scheduler.label.lastExecuteTime}"></th>
+        <th style="width: 8%" class="align-center" th:text="#{scheduler.label.result}"></th>
     </tr>
     </thead>
     <tbody class="list-body">
@@ -31,13 +31,13 @@
                th:href="@{/schedulers/{id}/edit(id=${scheduler.taskId})}"></a>
         </td>
         <td style="width: 5%" class="align-center" th:text="#{'scheduler.status.' + ${scheduler.useYn}}"></td>
-        <td style="width: 10%" class="align-center" th:text="${scheduler.taskType}"></td>
-        <td style="width: 25%" class="align-left" th:text="${scheduler.executeClass}"></td>
+        <td style="width: 8%" class="align-center" th:text="${scheduler.taskType}"></td>
+        <td style="width: 27%" class="align-left" th:text="${scheduler.executeClass}"></td>
         <td style="width: 10%" class="align-center" th:text="${scheduler.executeCycleType}"></td>
         <td style="width: 10%" class="align-left" th:if="${scheduler.executeCycleType == 'cron' }" th:text="${scheduler.cronExpression}"></td>
         <td style="width: 10%" class="align-left" th:if="${scheduler.executeCycleType != 'cron' }" th:text="${scheduler.executeCyclePeriod}"></td>
-        <td style="width: 15%" class="align-left">-</td>
-        <td style="width: 5%" class="align-center">-</td>
+        <td style="width: 12%" class="align-left" th:name="executeTime" th:text="${scheduler.executeTime}"></td>
+        <td style="width: 8%" class="align-center" th:if="${scheduler.result != null}" th:text="#{'scheduler.result.' + ${scheduler.result}}"></td>
     </tr>
     </tbody>
 </table>
