DR 컴포넌트 첫행 동작 수정 (#10023) - MR 응대
- 글자색 변경

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -4266,6 +4266,7 @@ body.modal-active {
 }
 .component.dr-table .btn-dr-table-row-add .btn-dr-table-row-add-text {
   margin-left: 0.625rem;
+  color: #3F4B56;
 }
 .component.dr-table .dr-table-row-delete {
   display: inline-block;
