#9701 [단위 테스트 - 문서함] 태그 글자가 길경우 처리
- span 영역 max-width 추가

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1358,6 +1358,7 @@ label {
 }
 .tagify tag > div span {
   height: 1.25rem;
+  max-width: 28.875rem;
 }
 .tagify tag > div:hover::before {
   color: #0098FF;
