--- a/src/main/resources/public/template/workflow/workFlowEdit.html
+++ b/src/main/resources/public/template/workflow/workFlowEdit.html
@@ -94,7 +94,7 @@
                 <label class="field-label" for="document-icon" th:text="#{document.label.icon}"></label>
                 <div class="flex-row input-button">
                     <input type="text" id="document-icon" class="col-5" th:value="${documentData?.documentIcon}" readonly />
-                    <button type="button" class="default-line col-1" th:text="#{common.btn.select}" th:onclick="openIcon();"></button>
+                    <button type="button" class="default-line" th:text="#{common.btn.select}" th:onclick="openIcon();"></button>
                 </div>
             </div>
         </div>
