--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -21,7 +21,7 @@
                 <div class="flex-row input-button">
                     <input type="hidden" id="typeId" th:value="${ciData?.typeId}" />
                     <input type="text" id="typeName" class="col-pct-12 inherit" th:value="${ciData?.typeName}" readonly required="true" th:attr="data-required-name=#{cmdb.ci.label.type}"/>
-                    <button class="default-line col-1" id="typeSelectBtn" type="button" th:onclick="CI.openSelectTypeModal([[${ciData?.typeId}]]);" th:text="#{common.btn.select}"></button>
+                    <button class="default-line" id="typeSelectBtn" type="button" th:onclick="CI.openSelectTypeModal([[${ciData?.typeId}]]);" th:text="#{common.btn.select}"></button>
                 </div>
             </div>
             <!-- 아이콘 -->
@@ -31,7 +31,7 @@
                 </label>
                 <div class="flex-row input-button">
                     <input type="text" id="typeIcon" class="col-pct-12 inherit" th:value="${ciData?.ciIcon}" readonly>
-                    <button class="default-line col-1" type="button" th:onclick="CI.openSelectIconModal([[${ciData?.ciIcon}]]);" th:text="#{common.btn.select}"></button>
+                    <button class="default-line" type="button" th:onclick="CI.openSelectIconModal([[${ciData?.ciIcon}]]);" th:text="#{common.btn.select}"></button>
                 </div>
             </div>
             <!-- CI 이름 -->
@@ -61,7 +61,7 @@
                 <div class="flex-row input-button">
                     <input type="hidden" id="classId" th:value="${ciData?.classId}"/>
                     <input type="text" id="className" class="col-pct-12 inherit" th:value="${ciData?.className}" readonly required="true" th:attr="data-required-name=#{cmdb.type.label.class}"/>
-                    <button class="default-line col-1" type="button" th:onclick="CI.openSelectClassModal([[${ciData?.classId}]]);" th:text="#{common.btn.select}"></button>
+                    <button class="default-line" type="button" th:onclick="CI.openSelectClassModal([[${ciData?.classId}]]);" th:text="#{common.btn.select}"></button>
                 </div>-->
             </div>
             <!-- CI 태그 -->
