--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -61,7 +61,7 @@
                             <label th:text="#{user.label.department}" for="department"></label>
                             <div class="flex-row input-button">
                                 <input type="hidden" id="departmentCode" name="departmentCode" th:value="${deptCodeDetail?.code}"/>
-                                <input class="col-5" id="department" name="department" th:value="${deptCodeDetail?.codeValue}" readonly>
+                                <input type="text" class="col-5" id="department" name="department" th:value="${deptCodeDetail?.codeValue}" readonly>
                                 <button type="button" class="default-line" onclick="deptPopUp();" th:text="#{common.btn.select}"></button>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                 title: i18n.msg('department.label.deptList'),
                 dataUrl: '/rest/codes?pCode=' + rootCode,
                 root: rootCode,
-                rootLevel: 5,
+                rootLevel: 3,
                 target: 'treeList',
                 text: 'codeName',
                 defaultIcon: '/assets/media/icons/tree/icon_tree_users.svg',
