#9701 [단위 테스트 - 문서함] 태그 글자가 길경우 처리
- span 영역 max-width 추가

--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -259,6 +259,11 @@
               margin-right: 0.3125rem; // 5px
               border-radius: 0.1875rem; // 3px
             }
+            .textarea-scroll-wrapper {
+              width: 24.6875rem; // 395px
+              height: 4.0625rem; // 65px
+              margin-right: 0.3125rem;// 5px
+            }
           }
         }
       }
