--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -22,7 +22,7 @@
                     <span class="required"></span>
                 </label>
                 <input type="text" id="taskName" required="required" maxlength="100"
-                       th:value="${schedule?.taskName}">
+                       th:value="${schedule?.taskName}"/>
             </div>
             <div class="flex-column edit-row">
                 <label for="taskDesc">
@@ -63,13 +63,13 @@
                         <span class="required"></span>
                     </label>
                     <input type="text" id="executeClass" required="required" maxlength="100"
-                           th:value="${schedule?.executeClass}">
+                           th:value="${schedule?.executeClass}"/>
                 </div>
                 <div class="flex-column edit-row">
                     <label>
                         <span th:text="#{scheduler.label.args}"></span>
                     </label>
-                    <input type="text" id="args" maxlength="100" th:value="${schedule?.args}">
+                    <input type="text" id="args" maxlength="100" th:value="${schedule?.args}"/>
                 </div>
             </div>
             <!-- 타입: query -->
@@ -102,7 +102,7 @@
                     <span class="required"></span>
                 </label>
                 <input type="text" id="cronExpression" required="required" maxlength="100"
-                       th:value="${schedule?.cronExpression}">
+                       th:value="${schedule?.cronExpression}"/>
             </div>
             <div id="executeCycleType-fixed-container" class="flex-column edit-row" th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
                 <label for="executeCyclePeriod">
@@ -110,7 +110,7 @@
                     <span class="required"></span>
                 </label>
                 <input type="text" id="executeCyclePeriod" required="required" maxlength="6"
-                       th:value="${schedule?.executeCyclePeriod}" onkeydown="return onlyNumber(event)" onkeyup="removeChar(event)">
+                       th:value="${schedule?.executeCyclePeriod}" onkeydown="return onlyNumber(event)" onkeyup="removeChar(event)"/>
             </div>
             <div class="flex-row justify-content-end edit-row">
                 <div class="btn-list">
@@ -347,4 +347,5 @@
         }
         /*]]>*/
     </script>
+</th:block>
 </html>
