#9602 [단위테스트 - 이미지관리] 이미지가 깨져서 출력되는 현상

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3740,7 +3740,7 @@ body.modal-active {
   display: inline-block;
   width: 100%;
   height: 9.063rem;
-  background-size: cover;
+  background-size: auto;
   background-repeat: no-repeat;
   background-position: center center;
 }
