--- a/src/main/resources/public/src/scss/template/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/template/_thumbnail.scss
@@ -32,7 +32,7 @@
       display: inline-block;
       width: 100%;
       height: 9.063rem; // 145px
-      background-size: cover;
+      background-size: auto;
       background-repeat: no-repeat;
       background-position: center center;
     }
